2009-??-?? - JustinClift

 Alpha 6
 *******
 
 * The control bar in swf output is much better looking, now finally of acceptable quality.
 * The default width and height for new projects is whatever width and height was last used.
 * The user is now always given the option to Cancel in the application quit dialog.
 * Layers can now be moved both partially or completely off the visible slide area.
 * Added a "screenshot delay" preference, in seconds, which can range from 0 to 60.
 * Changed the status bar to a progress bar, updating many functions to use it.
 * Swapped the ordering of the Cancel and OK buttons.  Launchpad bug # 301070.
 * Visual notification messages are now shown when screenshots are taken.
 * Added a status bar icon, with a right click menu for various actions.
 * Updated the text layer dialog to display with the chosen attributes.
 * Several minor improvements for the time line area.
 * Added a title bar icon.  Launchpad bug # 361019.
 * Text layers can now be any of the DejaVu fonts.
 * Centered selected slide in the workspace area. 
 * Added a dependency on libnotify.
 * Updated to work on Centos 5.3.
 * Minor bug fixes.


2009-02-14 - JustinClift

 Preparation for Alpha 5.  Added critical bug fixes, plus new and
 updated translations from LaunchPad contributors.


2008-09-17 - JustinClift

 Merged the three Salasaga modules into one.


2008-09-15 - JustinClift

 Preparing the source for Alpha 4.


2008-07-22 - JustinClift

 Began updating project to properly use GNU gettext.


2008-07-21 - JustinClift

 Project converted to use automake. 
